# image2gcode

./: LICENSE  README.md  gcode2image.py  image2gcode.py  pyproject.toml
image2gcode/: __init__.py  __main__.py  boundingbox.py  image2gcode.py  imagegen.py
